# macroforge-ts

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EXAMPLE_MACRO_DX.md  GEMINI.md  LICENSE  TODO.md  biome.json  package-lock.json  package.json  pixi.toml  ts-macros.json
.github/workflows/: CI.yml  deploy-website.yml
.zed/: settings.json
crates/: Cargo.toml
crates/dynamic_json_macro/: Cargo.toml  macro.toml
crates/dynamic_json_macro/src/: lib.rs
crates/examples/: derive_debug.rs
crates/extensions/macroforge/: Cargo.toml  README.md  extension.toml  extension.wasm
crates/extensions/macroforge/src/: lib.rs  old.rs
crates/extensions/svelte-macroforge/: Cargo.toml  README.md  extension.toml  extension.wasm
crates/extensions/svelte-macroforge/src/: lib.rs
crates/extensions/ts-derive-svelte/: extension.wasm
crates/extensions/ts-derive-svelte/src/: lib.rs
crates/extensions/ts-derive-ts/: README.md  extension.wasm
crates/extensions/ts-derive-ts/src/: lib.rs  old.rs
crates/extensions/vtsls-macroforge/src/: lib.rs
crates/macroforge_ts/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  result.d.ts  result.js  serde.mjs
crates/macroforge_ts/js/serde/: index.d.ts  index.mjs  index.ts
crates/macroforge_ts/js/traits/: index.d.ts  index.ts
crates/macroforge_ts/js/utils/: index.d.ts  index.mjs  index.ts
crates/macroforge_ts/npm/darwin-arm64/: package.json
crates/macroforge_ts/npm/darwin-x64/: package.json
crates/macroforge_ts/npm/linux-arm64-gnu/: package.json
crates/macroforge_ts/npm/linux-x64-gnu/: package.json
crates/macroforge_ts/npm/win32-arm64-msvc/: package.json
crates/macroforge_ts/npm/win32-x64-msvc/: package.json
crates/macroforge_ts/src/: lib.rs
crates/macroforge_ts/src/builtin/: derive_clone.rs  derive_common.rs  derive_debug.rs  derive_default.rs  derive_eq.rs  derive_partial_ord.rs  mod.rs
crates/macroforge_ts/src/builtin/serde/: derive_deserialize.rs  derive_serialize.rs  mod.rs
crates/macroforge_ts/src/host/: derived.rs  dispatch.rs  expand.rs  mod.rs  patch_applicator.rs  traits.rs
crates/macroforge_ts/src/test/: mod.rs
crates/macroforge_ts_macros/src/: lib.rs
crates/macroforge_ts_quote/: README.md
crates/macroforge_ts_quote/src/: lib.rs  template.rs  test.rs
crates/macroforge_ts_syn/src/: derive.rs  errors.rs  lower.rs  stream.rs
crates/macroforge_ts_syn/src/abi/: patch.rs
crates/macroforge_ts_syn/src/abi/ir/: context.rs  enum_.rs  mod.rs  type_alias.rs
crates/swc-napi-macros/: Cargo.toml  index.d.ts  index.js  package.json
crates/swc-napi-macros/src/: derive_builtins.rs  lib.rs  macro_host.rs  macros.rs  test.rs
crates/swc-napi-macros/src/builtin/: derive_clone.rs  derive_debug.rs  derive_eq.rs  mod.rs
crates/ts_macro_abi/: Cargo.toml
crates/ts_macro_abi/src/: helpers.rs  lib.rs  patch.rs  source_map.rs  span.rs
crates/ts_macro_abi/src/ir/: class.rs  context.rs  decorators.rs  enum_.rs  mod.rs
crates/ts_macro_cli/: Cargo.toml
crates/ts_macro_cli/src/: main.rs
crates/ts_macro_derive/: Cargo.toml  README.md
crates/ts_macro_derive/src/: lib.rs
crates/ts_macro_host/: Cargo.toml
crates/ts_macro_host/src/: config.rs  derived.rs  dispatch.rs  error.rs  expand.rs  lib.rs  patch_applicator.rs  registry.rs  traits.rs
crates/ts_macro_host/src/builtin/: derive_clone.rs  derive_debug.rs  derive_eq.rs  mod.rs
crates/ts_macro_host/tests/: decorator_stripping.rs
crates/ts_macroforge/: Cargo.toml  index.d.ts  index.js  package.json
crates/ts_macroforge/src/: lib.rs  macro_host.rs  test.rs
crates/ts_macroforge/src/builtin/: derive_clone.rs  derive_debug.rs  derive_eq.rs  mod.rs
crates/ts_quote/: Cargo.toml  README.md
crates/ts_quote/src/: lib.rs  patches.rs  quote.rs  template.rs  test.rs
crates/ts_syn/: Cargo.toml  README.md
crates/ts_syn/src/: derive.rs  errors.rs  lib.rs  lower.rs  parse.rs  quote_helpers.rs  stream.rs
crates/ts_syn/src/abi/: source_map.rs
docs/: BOOK.md
extensions/ts-derive-svelte/: README.md  extension.toml  extension.wasm
extensions/ts-derive-svelte/src/: lib.rs
extensions/ts-derive-ts/: Cargo.toml  extension.toml
extensions/ts-derive-ts/src/: lib.rs
playground/macro/: Cargo.toml  gigaform.ts  index.d.ts  index.js  package-lock.json  package.json  playground-macro.darwin-x64.node
playground/macro/scripts/: postbuild.mjs
playground/macro/src/: lib.rs  native.rs  wasm.rs
playground/macro/src/gigaform/: field_descriptors.rs  form_data.rs  mod.rs  parser.rs  types.rs
playground/svelte/: .gitignore  README.md  biome.json  new-macro.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
playground/svelte/messages/: en.json
playground/svelte/project.inlang/: project_id  settings.json
playground/test-macros-svelte/: README.md  package-lock.json  package.json  tsconfig.json
playground/tests/: .gitignore  examples.test.mjs  expansion.test.mjs  field-controller-macro.test.mjs  gigaform.test.mjs  package-lock.json  package.json  playwright.config.ts  playwright.svelte.config.ts  test-utils.mjs  tsconfig.json  vite-plugin-e2e.test.mjs  vtsls-playground-switch.test.js
playground/tests/e2e/: svelte-gigaform.spec.ts  svelte-macros.spec.ts  svelte-validators.spec.ts  vanilla-macros.spec.ts  vanilla-validators.spec.ts
playground/tests/rust-tests/: Cargo.toml
playground/tests/rust-tests/src/: lib.rs
playground/tests/rust-tests/src/fixtures/: field-controller-test.ts  macro-user.ts
playground/tests/validators/: helpers.mjs  (+8 more)
playground/vanilla/: biome.json  index.html  macroforge.json  package-lock.json  package.json  tsconfig.json  validator-form.html  vite.config.ts
scripts/: bump-version.cjs  cleanbuild-all.cjs  diagnostics.cjs  expand-playground.cjs  get-diagnostics.cjs  prep-for-commit.cjs  sync-website.cjs  test-crash-handler.js  test-native-crash.cjs
tests/e2e/: run-zed-test.sh  test-zed-vtsls.js  zed-extension-startup.test.js
website/: biome.json  components.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
website/src/: app.css
(+129 files in other folders)
