[workspace]
members = [
    "crates/swc-napi-macros",
    "crates/extensions/ts-derive-ts",
    "crates/extensions/ts-derive-svelte",
    "crates/ts_macro_abi",
    "crates/ts_syn",
    "crates/ts_quote", "playground/debug", "crates/ts_macro_host",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ts-macros contributors"]
license = "MIT"
repository = "https://github.com/rymskip/ts-macros"
