[workspace]
members = [
    "macroforge_ts",
    "extensions/macroforge",
    "extensions/svelte-macroforge",
    "ts_syn",
    "ts_quote",
    "ts_macro_derive",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["macroforge contributors"]
license = "MIT"
repository = "https://github.com/rymskip/macroforge-ts"
homepage = "https://github.com/rymskip/macroforge-ts"
keywords = ["typescript", "macros", "codegen", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
