[workspace]
members = [
    "macroforge_ts",
    "extensions/vtsls-macroforge",
    "extensions/svelte-macroforge",
    "macroforge_ts_syn",
    "macroforge_ts_quote",
    "macroforge_ts_macros",
]
resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2024"
authors = ["macroforge contributors"]
license = "MIT"
repository = "https://github.com/rymskip/macroforge-ts"
homepage = "https://github.com/rymskip/macroforge-ts"
keywords = ["typescript", "macros", "codegen", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
