[package]
name = "macroforge_ts"
version = "0.1.4"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "macroforge"
path = "src/bin/cli.rs"

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "3.5.2", features = ["napi8", "compat-mode"] }
napi-derive = "3.3.3"

# SWC Core for TypeScript parsing and transformation
swc_core = { version = "48.0.4", features = [
    "ecma_ast",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_utils",
    "common"
] }

# External crates
ts_syn = { path = "../ts_syn" }
ts_quote = { path = "../ts_quote" }
ts_macro_derive = { path = "../ts_macro_derive" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

inventory = "0.3.21"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Concurrency
dashmap = "6.1"

[build-dependencies]
napi-build = "2.3.1"

[dev-dependencies]
tempfile = "3.13.0"
