[package]
name = "swc-napi-macros"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "3.5.2", features = ["napi8", "compat-mode"] }
napi-derive = "3.3.3"

# SWC Core for TypeScript parsing and transformation
swc_core = { version = "48.0.4", features = [
    "ecma_ast",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_utils",
    "common"
] }

# Macro host and ABI
ts_macro_host = { path = "../ts_macro_host" }
ts_macro_abi = { path = "../ts_macro_abi" }
ts_syn = { path = "../ts_syn" }
ts_quote = { path = "../ts_quote" }
ts_macro_derive = { path = "../ts_macro_derive" }
serde_json = "1.0"

inventory = "0.3.21"

# Error handling
anyhow = "1.0"

[build-dependencies]
napi-build = "2.3.1"

[dev-dependencies]
tempfile = "3.13.0"
