[package]
name = "ts_macro_abi"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
swc_ecma_ast = { version = "18", default-features = false, features = ["serde-impl"] }
swc_common = "17"
