[package]
name = "ts_quote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
default = ["swc"]
swc = ["dep:swc_core"]

[dependencies]
swc_core = { version = "48", optional = true, default-features = false, features = [
  "common",
  "ecma_ast",
  "ecma_quote",
] }

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
convert_case = "0.6"
