[package]
name = "ts_syn"
description = "TypeScript syntax types for compile-time macro code generation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["swc"]
swc = ["dep:swc_core"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

swc_core = { version = "48", optional = true, default-features = false, features = [
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_quote",
  "ecma_codegen",
] }

thiserror = "1"
