[package]
name = "playground-macros"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "playground_macros"
crate-type = ["rlib", "cdylib"]

[dependencies]
napi = { version = "3.5.2", features = ["napi8", "compat-mode", "napi5"] }
napi-derive = { version = "3.3.3", features = ["compat-mode"] }
macroforge_ts = { path = "../../crates/macroforge_ts" }
ts_syn = { path = "../../crates/ts_syn" }
ts_quote = { path = "../../crates/ts_quote" }
swc_core = { version = "48", default-features = false, features = [
  "common",
  "ecma_ast",
] }
inventory = "0.3"
serde_json = "1.0"
ts_macro_derive = { path = "../../crates/ts_macro_derive" }

[build-dependencies]
napi-build = "2.3.1"
